<?xml version="1.0" encoding="UTF-8" ?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.adventofcode</groupId>
    <artifactId>advent-of-code</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>advent-of-code</name>
    <url>http://www.example.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <jacoco.version>0.8.14</jacoco.version>
        <junit.version>6.0.1</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Optionally: parameterized tests support -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
              <artifactId>maven-surefire-plugin</artifactId>
              <dependencies>
                <dependency>
                   <groupId>me.fabriciorby</groupId>
                   <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
                   <version>1.1.0</version>
                </dependency>
              </dependencies>
              <configuration>
                 <reportFormat>plain</reportFormat>
                 <consoleOutputReporter>
                    <disable>true</disable>
                 </consoleOutputReporter>
                 <statelessTestsetInfoReporter
                        implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporterUnicode"
                    />
              </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.4.0</version>
                </plugin>
                <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                </plugin>
                <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                </plugin>
                <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                </plugin>
                <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                </plugin>
                <plugin>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.2</version>
                </plugin>
                <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.2</version>
                </plugin>
                <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
                </plugin>
                <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.6.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
